레이아웃 및 스타일 개선: RootLayout에 스타일 추가, 페이지 CSS 수정, 푸터 메뉴 및 상품 목록 구성 요소 리팩토링, 불필요한 CartView 컴포넌트 삭제

--- a/app/page_weblink.css
+++ b/app/page_weblink.css
@@ -553,18 +553,24 @@ body {
 }
 
 .sample {
-    background: #f7f7f7;
+    background: #f1f5f9;
+    min-height: 100vh; /*추가*/
+    padding-bottom: 64px; /*추가*/
+    display: flex; /*추가*/
+    flex-direction: column; /*추가*/
 }
 
 .sample__name {
     position: relative;
-    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 64px;
     font-size: 20px;
     font-weight: 600;
     background: #21409a;
     color: #fff;
-    text-align: center;
-    line-height: 30px;
+    line-height: 20px;
 }
 
 .sample__tel {
