--- a/app/page_weblink.css
+++ b/app/page_weblink.css
@@ -1372,6 +1372,9 @@ color: #777;
 
 /*# sourceMappingURL=page.css.map */
 
+
+
+
 /* 뒤로가기 */
 .sample__back {position: absolute; left: 0; top: 0; width: 50px; height: 64px; display: flex; align-items: center; justify-content: center; color: #fff; text-decoration: none;}
 
@@ -1381,32 +1384,13 @@ color: #777;
 .footmenu__link:hover { text-decoration: none; }
 
 
+/* 상품목록 카트 아이콘 */
+.icon__cartbox { position: absolute; display: flex; width: 64px; height: 64px; right: 5%; bottom: 5%; align-items: center; justify-content: center; border-radius: 50%; background: #fff; box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.3);}
+.goods__list--type2 .icon__cartbox {width: 44px; height: 44px;}
+.goods__list--type3 .icon__cartbox {width: 34px; height: 34px;}
+.goods__list--type4 .icon__cartbox {width: 28px; height: 28px;}
 
-/* 주문상품 리스트 */
-.write__infogroup {display:grid; grid-template-columns: 60px 1fr 40px; gap: 0 8px; align-items:center;}
-.write__img {grid-row: span 2; width: 60px; height: 60px; object-fit: cover; aspect-ratio:1/1; border-radius: 4px; border:1px solid #d1d1d6}
-.write__name {}
-.write__amount {text-align:right; color:#666;}
-.write__price {grid-column:span 2 / span 2; text-align:right; font-size:16px; font-weight:bold}
-.write__coupon {display:flex; gap:8px; align-items:center; margin-top:6px; margin-left:60px; padding:2px; background:#f1f5f9; border-radius:4px; font-size:14px; color:#666}
-.write__cname {font-size:14px;}
-.write__cprice {color:#dc2626; font-size:16px; font-weight:bold; margin-left:auto}
 
-/* 상세상품 리스트 */
-.detail__infogroup {display:grid; grid-template-columns: 60px 1fr 40px; gap: 0 8px; align-items:center;}
-.detail__img {grid-row: span 2; width: 60px; height: 60px; object-fit: cover; aspect-ratio:1/1; border-radius: 4px; border:1px solid #d1d1d6}
-.detail__name {}
-.detail__amount {text-align:right; color:#666;}
-.detail__price {grid-column:span 2 / span 2; text-align:right; font-size:16px; font-weight:bold}
-.detail__coupon {display:flex; gap:8px; align-items:center; margin-top:6px; margin-left:60px; padding:2px; background:#f1f5f9; border-radius:4px; font-size:14px; color:#666}
-.detail__cname {font-size:14px;}
-.detail__cprice {color:#dc2626; font-size:16px; font-weight:bold; margin-left:auto}
-
-/* 주문서 작성 하단 버튼 */
-.orderswrite__btngroup {display:flex; flex-direction:column; margin-top:30px}
-.orderswrite__btngroup label {display:flex; margin:0 auto}
-.orderswrite__btngroup input[type=checkbox] {margin-right:6px}
-.orderswrite__btn {display: flex; justify-content: center; align-items: center; height: 56px; margin:20px 0 50px; background: #f43f5e; border-radius: 8px; color: #fff; font-size: 18px; font-weight: 600; cursor: pointer;}
 
 /* 카트 리스트 */
 .cartlist {flex:1;display:flex; flex-direction:column; padding:10px 3px; gap:2px;}
@@ -1431,7 +1415,7 @@ color: #777;
 .layer__wrap { display:flex; position:fixed; inset:0; padding:12px; align-items: center; justify-content:center; z-index:999; }
 .layer__bg {position:absolute; inset:0; background:rgba(0,0,0,.5);}
 
-.layer__box {  }
+.layer__box {}
 .layer__goods__name { position: relative; overflow: hidden; width: 250px; margin: 5px auto 0; font-size: 19px; font-weight: 600; line-height: 1.2; word-break: break-all; }
 .layer__image { max-height: 300px !important; }
 @media screen and (min-width:512px) and (max-width:717px) and (orientation:portrait) {
@@ -1439,12 +1423,14 @@ color: #777;
     .layer__image {max-height: 283px !important;}
 }
 
+
 /* 레이어팝업 공지사항  */
 .layer__popup {display:flex; position:fixed; inset:0; padding:12px; align-items: center; justify-content:center; z-index:999;}
 .layer__panel {position:relative; display:flex; flex-direction:column; width:100%; min-height:288px; padding:12px; border-radius:16px; background:#f8fafc; overflow:hidden; z-index:1000}
 .layer__tit { margin-block:8px; text-align:center; font-size:18px; font-weight:bold}
 .layer__body { display:flex; flex-direction:column; gap:16px; height:240px; padding:16px; overflow-y:scroll; border:1px solid f1f5f9; border-radius:8px; font-size:16px; background: #fff;}
 .layer__close {position:absolute; top:12px; right:12px; fill:#62748e}
+
 
 /* 주문내역상세 */
 .ordersdetail {display:flex; flex-direction:column; padding:3px; gap:2px;}
@@ -1464,8 +1450,15 @@ color: #777;
 .detail__list {display:flex;  flex-direction:column}
 .detail__list li {padding:10px 0; border-bottom:1px solid #e2e8f0;}
 .detail__list li:last-child {border: none}
-.detail__name {}
 .detail__btn {display:flex; align-items:center; justify-content:center; width:140px; height:40px; margin:40px auto 80px; padding: 0 20px; border:1px solid #cbd5e1; border-radius:3px; font-weight:bold; background:#fff; text-decoration:none}
+.detail__infogroup {display:grid; grid-template-columns: 60px 1fr 40px; gap: 0 8px; align-items:center;}
+.detail__img {grid-row: span 2; width: 60px; height: 60px; object-fit: cover; aspect-ratio:1/1; border-radius: 4px; border:1px solid #d1d1d6}
+.detail__name {}
+.detail__amount {text-align:right; color:#666;}
+.detail__price {grid-column:span 2 / span 2; text-align:right; font-size:16px; font-weight:bold}
+.detail__coupon {display:flex; gap:8px; align-items:center; margin-top:6px; margin-left:60px; padding:2px; background:#f1f5f9; border-radius:4px; font-size:14px; color:#666}
+.detail__cname {font-size:14px;}
+.detail__cprice {color:#dc2626; font-size:16px; font-weight:bold; margin-left:auto}
 
 
 /* 주문서작성 */
@@ -1474,11 +1467,9 @@ color: #777;
 .write__header {display: flex; align-items:center; height:36px; padding:0 10px; border-bottom:1px solid #e2e8f0;}
 .write__tit {display:flex; align-items:center; font-size:16px; line-height:1.5; font-weight:bold; color:#475569 }
 .write__body {display:flex; flex-direction:column; gap:2px; padding:10px}
-
 .write__tbl {width:100%; border-collapse: collapse;}
 .write__tbl th {width:90px; padding: 4px 6px; background:#f1f5f9; text-align:left; font-weight:normal; color:#64748b; line-height:1}
 .write__tbl td {padding: 4px 6px; line-height:1.2;}
-
 .write__tbl2 {width:100%; border-collapse: collapse;}
 .write__tbl2 th {width:90px; padding: 6px; text-align:left; color:#64748b;}
 .write__tbl2 td {padding: 6px; line-height:1.2}
@@ -1487,24 +1478,30 @@ color: #777;
 .write__tbl2 .text_bold{ font-weight: bold }
 .write__input {width:100%; border:1px solid #cbd5e1; padding:4px 6px; border-radius:4px; font-size:14px; color:#333; background:#f8fafc; box-sizing:border-box}
 .write__btn {width:100px; height:30px; background:#f1f5f9; border:1px solid #d1d1d6; color:#333; font-weight:bold; cursor:pointer}
-
 .write__radiogroup {display:flex; flex-direction:column; gap:6px}
 .write__radiogroup label {display:flex;}
 .write__radiogroup input[type=radio] { margin-right:6px}
 .write__radiogroup p {margin-left:19px}
-
 .write__list {display:flex;  flex-direction:column}
 .write__list li {padding:10px 0; border-bottom:1px solid #e2e8f0;}
 .write__list li:last-child {border: none}
+.write__btngroup {display:flex; flex-direction:column; margin-top:30px}
+.write__btngroup label {display:flex; margin:0 auto}
+.write__btngroup input[type=checkbox] {margin-right:6px}
+.write__bigbtn {display: flex; justify-content: center; align-items: center; height: 56px; margin:20px 0 50px; background: #f43f5e; border-radius: 8px; color: #fff; font-size: 18px; font-weight: 600; cursor: pointer;}
+.write__infogroup {display:grid; grid-template-columns: 60px 1fr 40px; gap: 0 8px; align-items:center;}
+.write__img {grid-row: span 2; width: 60px; height: 60px; object-fit: cover; aspect-ratio:1/1; border-radius: 4px; border:1px solid #d1d1d6}
+.write__name {}
+.write__amount {text-align:right; color:#666;}
+.write__price {grid-column:span 2 / span 2; text-align:right; font-size:16px; font-weight:bold}
+.write__coupon {display:flex; gap:8px; align-items:center; margin-top:6px; margin-left:60px; padding:2px; background:#f1f5f9; border-radius:4px; font-size:14px; color:#666}
+.write__cname {font-size:14px;}
+.write__cprice {color:#dc2626; font-size:16px; font-weight:bold; margin-left:auto}
 
 
-/* 상품목록 카트 아이콘 */
-.icon__cartbox { position: absolute; display: flex; width: 64px; height: 64px; right: 5%; bottom: 5%; align-items: center; justify-content: center; border-radius: 50%; background: #fff; box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.3);}
-.goods__list--type2 .icon__cartbox {width: 44px; height: 44px;}
-.goods__list--type3 .icon__cartbox {width: 34px; height: 34px;}
-.goods__list--type4 .icon__cartbox {width: 28px; height: 28px;}
 
-/*  */
+
+/* 주문내역 */
 .orderslist__info {display: flex; justify-content: center; align-items: center; height: 30px; font-size: 14px; color: #e11d48;}
 .orderslist {display:flex; flex-direction:column; padding:3px; gap:2px;}
 .ordersitem {display: flex; flex-direction:column; border-radius:4px; background:#fff; border:1px solid #d1d1d6  }
