--- a/app/page_weblink.css
+++ b/app/page_weblink.css
@@ -1424,17 +1424,35 @@ color: #777;
 } */
 
 
-/* 레이어팝업 공지사항  */
+/* 레이어팝업 */
 .layer__wrap {display:flex; position:fixed; inset:0; padding:30px; align-items: center; justify-content:center; z-index:999;}
 .layer__bg {position:absolute; inset:0; background:rgba(0,0,0,.4);}
-.layer__panel {position:relative; display:flex; flex-direction:column; width:100%; min-height: 300px; max-height:80dvh; border-radius:16px; background:#f8fafc; overflow:hidden; z-index:1000}
-.layer__tit {display: flex; align-items: center; justify-content: center; height: 44px; text-align:center; font-size:18px; font-weight:bold}
-.layer__body {flex: 1; display:flex; flex-direction:column; margin:0 12px 12px; padding:16px; overflow-y:scroll; border:1px solid f1f5f9; border-radius:8px; font-size:16px; background: #fff;}
+.layer__panel {position:relative; display:flex; flex-direction:column; width:100%; min-height: 300px; max-height:90dvh; border-radius:16px; background:#f8fafc; overflow:hidden; z-index:1000}
+.layer__header {height: 44px; padding:0 12px}
+.layer__body {flex: 1; display:flex; flex-direction:column; padding:0 12px; font-size:16px;}
+.layer__footer {padding:0 12px}
 .layer__close {position:absolute; top:4px; right:4px; fill:#62748e}
+.layer__tit {margin-top: 10px; text-align:center; font-size:18px; font-weight:bold}
+
+/* 공지팝업 */
+.layer__notice {overflow-y: scroll; height: 250px; background: #fff; margin-bottom: 12px; padding: 12px; border-radius: 12px;}
 
 /* 팝업상품상세 */
-.layer__goodsbox {flex: 1; display: flex; flex-direction: column; padding: 0;}
-.layer__goodsbtnbox {}
+.layer__goodsinfo {display:flex; flex-direction: column; margin-top: 10px;}
+.layer__goodsimg {margin: 30px 18px 0; border: 1px solid #e2e8f0}
+.layer__goodstxt {margin:10px 0; font-size:13px; text-align: center;}
+.layer__quantity {position:relative; display: flex; align-items:center; width:130px; height:40px; margin: 0 auto; border:1px solid #90a1b9; border-radius:50px; background: #fff;}
+.layer__quantitybtn {display: flex; align-items: center; justify-content: center; cursor: pointer;}
+.layer__quantitybtn--left {margin-right:auto; padding-left:13px}
+.layer__quantitybtn--right {margin-left:auto; padding-right:13px}
+.layer__quantitynum{flex:1; display:flex; align-items:center; justify-content:center; margin:0 auto; font-size:18px;}
+
+
+.layer__goodsprice {margin: 10px auto 0; font-size: 30px; font-weight: 800; letter-spacing: -0.7px; color: #fa5252;}
+.layer__goodsname {margin:0 auto; font-size: 18px; font-weight: 600;}
+.layer__goodsbtn {display:flex; align-items: center; justify-content: center; width: 200px; height: 46px; margin:20px auto 30px; border-radius: 8px; font-size: 18px; font-weight: bold; background: #f43f5e;color:#fff}
+
+
 
 /* 주문내역상세 */
 .ordersdetail {display:flex; flex-direction:column; padding:3px; gap:2px;}
