Refactor order completion button class name, enhance popup functionality, and improve CSS styles for better UI consistency
- Changed class name for the order completion button in OrdersWrite component.
- Added a new popup state in Home component and improved SVG icons for better accessibility.
- Enhanced the layout and styles of various components in Home, including product lists and popups.
- Updated CSS styles for cart icons, order items, and user input forms to improve visual consistency and responsiveness.

--- a/app/page_weblink.css
+++ b/app/page_weblink.css
@@ -1381,82 +1381,86 @@ color: #777;
 /* 푸터 메뉴 */
 .footmenu { position: fixed; bottom: 0; width: 100%; display: flex; height: 64px; background: #fff; border-top: 1px solid #cbd5e1; justify-content: space-around; align-items: center; }
 .footmenu__link { display: flex; flex-direction: column; align-items: center; justify-content: center; width: 64px; height: 64px; font-size: 12px; text-decoration: none; color: #666; }
+.footmenu__link svg { width: 24px; height: 24px; margin-bottom: 4px; fill: #64748b; }
+.footmenu__link.disabled { color: #cbd5e1; cursor: not-allowed; }
+.footmenu__link.disabled svg { fill: #cbd5e1; }
 .footmenu__link:hover { text-decoration: none; }
 
 
 /* 상품목록 카트 아이콘 */
-.icon__cartbox { position: absolute; display: flex; width: 64px; height: 64px; right: 5%; bottom: 5%; align-items: center; justify-content: center; border-radius: 50%; background: #fff; box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.3);}
+.icon__cartbox { position: absolute; display: flex; width: 64px; height: 64px; right: 5%; bottom: 5%; align-items: center; justify-content: center; border: 1px solid #60a5fa; border-radius: 50%; background: #fff; box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);}
+.icon__cartbox svg {fill: #3b82f6;}
+.icon__cartbox.active { background: #3b82f6; box-shadow:inset 1px 1px 3px rgba(0, 0, 0, 0.2);;}
+.icon__cartbox.active svg {fill: #fff;}
+
 .goods__list--type2 .icon__cartbox {width: 44px; height: 44px;}
 .goods__list--type3 .icon__cartbox {width: 34px; height: 34px;}
 .goods__list--type4 .icon__cartbox {width: 28px; height: 28px;}
+.goods__list--style2 .icon__cartbox {width: 34px; height: 34px;}
+.goods__list--style3 .icon__cartbox {width: 34px; height: 34px;}
 
 
 
 /* 카트 리스트 */
 .cartlist {flex:1;display:flex; flex-direction:column; padding:10px 3px; gap:2px;}
-.cartitem {display: flex; gap:8px; padding: 10px; border-radius:4px; background:#fff; border:1px solid #d1d1d6  }
-.cartitem__img {width: 80px; height: 80px; object-fit: cover; aspect-ratio:1/1; border-radius: 4px; border:1px solid #d1d1d6}
-.cartitem__info {position:relative; flex: 1; display: flex; flex-direction: column; justify-content: center;}
+.cartitem {position: relative; display: flex; gap:8px; padding:20px 10px; border-radius:4px; background:#fff; border:1px solid rgba(0,0,0,.1)  }
+.cartitem__img {width: 80px; height: 80px; object-fit: cover; aspect-ratio:1/1; border-radius: 4px; border:1px solid rgba(0,0,0,.1)}
+.cartitem__info { flex: 1; display: flex; flex-direction: column; justify-content: center;}
 .cartitem__name {overflow: hidden; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2; line-height:1.25; padding-right:30px; font-size: 16px; margin-bottom: 5px;}
-.cartitem__remove {position: absolute; right: 0; top: 0; width: 24px; height: 24px; cursor: pointer;}
+.cartitem__removebtn {position: absolute; right: 6px; top: 6px; width: 32px; height: 32px; cursor: pointer;}
+.cartitem__removebtn svg {}
 .cartitem__pricegroup {display:flex; margin-top:auto; align-items:center}
 .cartitem__price {margin-right:auto; font-size:16px;}
 .cartitem__price span{font-size: 18px; font-weight:bold; color: #333; margin-right: 4px;}
 .quantity {position:relative; display: flex; align-items:center; width:96px; height:32px; border:1px solid #90a1b9; border-radius:50px}
 .quantity__btn {display: flex; align-items: center; justify-content: center; cursor: pointer;}
+.quantity__btn:hover {text-decoration: none;}
 .quantity__btn--left {margin-right:auto; padding-left:13px}
 .quantity__btn--right {margin-left:auto; padding-right:13px}
 .quantity__num{flex:1; display:flex; align-items:center; justify-content:center; margin:0 auto; font-size:18px;}
 .cartfoot {display:flex; position:sticky; bottom:64px; width:100%; padding: 10px; background:#f1f5f9; border-top:1px solid #e2e8f0;}
-.cartfoot__btn {flex:1; display: flex; justify-content: center; align-items: center; height: 56px; background: #f43f5e; border-radius: 8px; color: #fff; font-size: 18px; font-weight:600; cursor: pointer;}
+.cartfoot__btn {flex:1; display: flex; justify-content: center; align-items: center; height: 46px; background: #f43f5e; border-radius: 8px; color: #fff; font-size: 18px; font-weight:600; cursor: pointer;}
 
 
 /* 레이어팝업 */
-/* .layer__wrap { display:flex; position:fixed; inset:0; padding:12px; align-items: center; justify-content:center; z-index:999; }
-.layer__bg {position:absolute; inset:0; background:rgba(0,0,0,.5);}
-
-.layer__box {}
-.layer__goods__name { position: relative; overflow: hidden; width: 250px; margin: 5px auto 0; font-size: 19px; font-weight: 600; line-height: 1.2; word-break: break-all; }
-.layer__image { max-height: 300px !important; }
-@media screen and (min-width:512px) and (max-width:717px) and (orientation:portrait) {
-    .layer.goods__list {padding: 0px 190px;}
-    .layer__image {max-height: 283px !important;}
-} */
-
-
-/* 레이어팝업 */
-.layer__wrap {display:flex; position:fixed; inset:0; padding:30px; align-items: center; justify-content:center; z-index:999;}
+.layer__wrap {display:flex; position:fixed; inset:0; padding:12px; align-items: center; justify-content:center; z-index:999;}
 .layer__bg {position:absolute; inset:0; background:rgba(0,0,0,.4);}
-.layer__panel {position:relative; display:flex; flex-direction:column; width:100%; min-height: 300px; max-height:90dvh; border-radius:16px; background:#f8fafc; overflow:hidden; z-index:1000}
-.layer__header {height: 44px; padding:0 12px}
-.layer__body {flex: 1; display:flex; flex-direction:column; padding:0 12px; font-size:16px;}
-.layer__footer {padding:0 12px}
-.layer__close {position:absolute; top:4px; right:4px; fill:#62748e}
-.layer__tit {margin-top: 10px; text-align:center; font-size:18px; font-weight:bold}
+.layer__panel {position:relative; display:flex; flex-direction:column; width:100%; padding: 16px; border-radius:16px; background:#f8fafc; overflow:hidden; z-index:1000}
+.layer__panel--white {background:#fff;}
+.layer__tit {margin-bottom: 8px; font-size:18px; line-height: 1.25; font-weight:700}
+.layer__close {position:absolute; top:12px; right:12px; fill:#64748b}
 
 /* 공지팝업 */
-.layer__notice {overflow-y: scroll; height: 250px; background: #fff; margin-bottom: 12px; padding: 12px; border-radius: 12px;}
+.layer__notice {display: flex; flex-direction: column; overflow-y: auto; height: 240px; background: #fff; padding: 16px; border:1px solid #f9f3f4; border-radius: 8px; font-size: 16px;}
+
+/* 사용자 정보입력 팝업 */
+.layer__userinfo {display: flex; flex-direction: column; overflow-y: auto; height: auto; background: #fff; padding: 16px; border:1px solid #f9f3f4; border-radius: 8px; font-size: 16px;}
+.layer__usertxt {margin-bottom: 8px; font-size:18px; line-height: 1.25; font-weight:700}
+.layer__userinput {width:100%; height: 36px; border:1px solid #cbd5e1; padding:4px 6px; border-radius:4px; font-size:16px; color:#333; background:#f8fafc; box-sizing:border-box}
+.layer__usercheckbox {display: flex; margin:24px auto}
+.layer__usercheckbox input{width: 24px; height: 24px; margin-right: 12px;}
+.layer__userunderline {text-decoration: underline;}
+.layer__userbtn {display: flex; justify-content: center; align-items: center; height: 48px; background: #f43f5e; border-radius: 8px; color: #fff; font-size: 18px; font-weight: 600; cursor: pointer;}
+
+
 
 /* 팝업상품상세 */
-.layer__goodsinfo {display:flex; flex-direction: column; margin-top: 10px;}
-.layer__goodsimg {margin: 30px 18px 0; border: 1px solid #e2e8f0}
-.layer__goodstxt {margin:10px 0; font-size:13px; text-align: center;}
-.layer__quantity {position:relative; display: flex; align-items:center; width:130px; height:40px; margin: 0 auto; border:1px solid #90a1b9; border-radius:50px; background: #fff;}
+.layer__goodsimgbox {overflow: hidden; display: flex; align-items: center; justify-content: center; height: 220px; margin-inline:-16px;background:#f8fafc; border-top:1px solid rgba(0, 0, 0, 0.1); border-bottom:1px solid rgba(0, 0, 0, 0.1);}
+.layer__goodsimgbox img {width: auto; height: 120%;}
+.layer__goodsinfo {display:flex; flex-direction: column;}
+.layer__goodstxt {margin: 8px auto; font-size:14px;}
+.layer__quantity {position:relative; display: flex; align-items:center; width:130px; height:40px; margin: 8px auto; border:1px solid #90a1b9; border-radius:50px; background: #fff;}
 .layer__quantitybtn {display: flex; align-items: center; justify-content: center; cursor: pointer;}
 .layer__quantitybtn--left {margin-right:auto; padding-left:13px}
 .layer__quantitybtn--right {margin-left:auto; padding-right:13px}
 .layer__quantitynum{flex:1; display:flex; align-items:center; justify-content:center; margin:0 auto; font-size:18px;}
-
-
-.layer__goodsprice {margin: 10px auto 0; font-size: 30px; font-weight: 800; letter-spacing: -0.7px; color: #fa5252;}
+.layer__goodsprice {margin: 0 auto; font-size: 30px; font-weight: 800; letter-spacing: -0.7px; color: #fa5252;}
 .layer__goodsname {margin:0 auto; font-size: 18px; font-weight: 600;}
-.layer__goodsbtn {display:flex; align-items: center; justify-content: center; width: 200px; height: 46px; margin:20px auto 30px; border-radius: 8px; font-size: 18px; font-weight: bold; background: #f43f5e;color:#fff}
-
-
+.layer__goodsbtn {display:flex; align-items: center; justify-content: center; width: 200px; height: 46px; margin:16px auto; border-radius: 8px; font-size: 18px; font-weight: bold; background: #f43f5e;color:#fff}
 
 /* 주문내역상세 */
 .ordersdetail {display:flex; flex-direction:column; padding:3px; gap:2px;}
-.detail {display:flex; flex-direction:column; border-radius:4px; background:#fff; border:1px solid #d1d1d6  }
+.detail {display:flex; flex-direction:column; border-radius:4px; background:#fff; border:1px solid rgba(0,0,0,.1)  }
 .detail__header {display: flex; align-items:center; height:36px; padding:0 10px; border-bottom:1px solid #e2e8f0;}
 .detail__tit {display:flex; align-items:center; font-size:16px; line-height:1.5; font-weight:bold; color:#475569 }
 .detail__body {display:flex; flex-direction:column; gap:2px; padding:10px}
@@ -1474,7 +1478,7 @@ color: #777;
 .detail__list li:last-child {border: none}
 .detail__btn {display:flex; align-items:center; justify-content:center; width:140px; height:40px; margin:40px auto 80px; padding: 0 20px; border:1px solid #cbd5e1; border-radius:3px; font-weight:bold; background:#fff; text-decoration:none}
 .detail__infogroup {display:grid; grid-template-columns: 60px 1fr 40px; gap: 0 8px; align-items:center;}
-.detail__img {grid-row: span 2; width: 60px; height: 60px; object-fit: cover; aspect-ratio:1/1; border-radius: 4px; border:1px solid #d1d1d6}
+.detail__img {grid-row: span 2; width: 60px; height: 60px; object-fit: cover; aspect-ratio:1/1; border-radius: 4px; border:1px solid rgba(0,0,0,.1)}
 .detail__name {}
 .detail__amount {text-align:right; color:#666;}
 .detail__price {grid-column:span 2 / span 2; text-align:right; font-size:16px; font-weight:bold}
@@ -1483,10 +1487,9 @@ color: #777;
 .detail__cname {font-size:16px;}
 .detail__cprice {color:#dc2626; font-size:16px; font-weight:bold; margin-left:auto}
 
-
 /* 주문서작성 */
 .orderswrite {display:flex; flex-direction:column; padding:3px; gap:2px;}
-.write {display:flex; flex-direction:column; border-radius:4px; background:#fff; border:1px solid #d1d1d6  }
+.write {display:flex; flex-direction:column; border-radius:4px; background:#fff; border:1px solid rgba(0,0,0,.1)  }
 .write__header {display: flex; align-items:center; height:36px; padding:0 10px; border-bottom:1px solid #e2e8f0;}
 .write__tit {display:flex; align-items:center; font-size:16px; line-height:1.5; font-weight:bold; color:#475569 }
 .write__body {display:flex; flex-direction:column; gap:2px; padding:10px}
@@ -1500,7 +1503,7 @@ color: #777;
 .write__bg--gray {background:#f1f5f9}
 .write__tbl2 .text_bold{ font-weight: bold }
 .write__input {width:100%; height: 36px; border:1px solid #cbd5e1; padding:4px 6px; border-radius:4px; font-size:16px; color:#333; background:#f8fafc; box-sizing:border-box}
-.write__btn {width:100px; height:36px; background:#f1f5f9; border:1px solid #d1d1d6; color:#333; font-weight:bold; cursor:pointer}
+.write__btn {width:100px; height:36px; background:#f1f5f9; border:1px solid rgba(0,0,0,.1); color:#333; font-weight:bold; cursor:pointer}
 .write__select { width:100%; height: 36px; border:1px solid #cbd5e1; margin-top:10px; padding:4px 6px; border-radius:4px; font-size:16px; color:#333; background:#f8fafc; box-sizing:border-box}
 .write__banknum {margin: 10px 0; font-size: 16px;}
 .write__radiogroup {display:flex; flex-direction:column; gap:10px;}
@@ -1513,9 +1516,9 @@ color: #777;
 .write__btngroup {display:flex; flex-direction:column; margin-top:30px;}
 .write__btngroup label {position: relative; display: block; margin:0 10px 0 34px; font-size: 16px;}
 .write__btngroup input[type=checkbox] {position: absolute; top:2px; left: -16px;}
-.write__bigbtn {display: flex; justify-content: center; align-items: center; height: 48px; margin:20px 0 50px; background: #f43f5e; border-radius: 8px; color: #fff; font-size: 18px; font-weight: 600; cursor: pointer;}
+.write__orederbtn {display: flex; justify-content: center; align-items: center; height: 48px; margin:20px 0 50px; background: #f43f5e; border-radius: 8px; color: #fff; font-size: 18px; font-weight: 600; cursor: pointer;}
 .write__infogroup {display:grid; grid-template-columns: 60px 1fr 40px; gap: 0 8px; align-items:center;}
-.write__img {grid-row: span 2; width: 60px; height: 60px; object-fit: cover; aspect-ratio:1/1; border-radius: 4px; border:1px solid #d1d1d6}
+.write__img {grid-row: span 2; width: 60px; height: 60px; object-fit: cover; aspect-ratio:1/1; border-radius: 4px; border:1px solid rgba(0,0,0,.1)}
 .write__name {}
 .write__amount {text-align:right; color:#666;}
 .write__price {grid-column:span 2 / span 2; text-align:right; font-size:16px; font-weight:bold}
@@ -1524,20 +1527,18 @@ color: #777;
 .write__cname {font-size:16px;}
 .write__cprice {color:#dc2626; font-size:16px; font-weight:bold; margin-left:auto}
 
-
-
-
 /* 주문내역 */
-.orderslist__info {display: flex; justify-content: center; align-items: center; height: 30px; font-size: 14px; color: #e11d48;}
+.orderslist__info {display: flex; justify-content: center; align-items: center; height: 30px; font-size: 14px; background: #fee2e2; color: #e11d48;}
 .orderslist {display:flex; flex-direction:column; padding:3px; gap:2px;}
-.ordersitem {display: flex; flex-direction:column; border-radius:4px; background:#fff; border:1px solid #d1d1d6  }
-.ordersitem__header {display: flex; align-items:center; height:36px; padding:0 10px; border-bottom:1px solid #e2e8f0; }
-.ordersitem__tit {display:flex; align-items:center; font-size:16px; line-height:1.5; font-weight:bold; color:#475569 }
-.ordersitem__body {display:flex; flex-direction:column; gap:2px; padding:10px}
+.ordersitem {position: relative; display: flex; height: 84px; gap: 40px; padding-inline: 12px; border-radius:4px; background:#fff; border:1px solid rgba(0,0,0,.1)}
+.ordersitem:hover {text-decoration: none;}
+.ordersitem__group {display: flex; flex-direction: column; justify-content: center; gap:4px ;}
 .ordersitem__time {font-size:14px; line-height:1.2; color:#64748b}
-.ordersitem__group {display: flex; gap:40px}
-.ordersitem__name {font-size:16px;}
-.ordersitem__price {margin-left:auto; font-size: 16px; font-weight:bold;}
-.ordersitem__footer {display:flex; height:38px; padding:0 10px;  border-top:1px solid #e2e8f0;}
-.ordersitem__btn {display:flex; align-items:center; margin:auto; padding:2px 14px; border:1px solid #dfdfdf; border-radius:4px;}
+.ordersitem__name {display: flex; font-size:16px; line-height: 1.2;}
+.ordersitem__name span {flex: 1; overflow: hidden; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp:1;}
+.ordersitem__price {margin:auto 36px auto auto; font-size: 16px; font-weight:bold;}
+.ordersitem__icon {position: absolute; top: 0; right: 12px; bottom:0; display: flex; justify-content: center; align-items: center;}
+.ordersitem__icon svg{width: 16px; height: 16px; fill:#cbd5e1;}
 .text__nodata {display:flex; margin: 20px auto; font-size:20px}
+
+/* 사용자 정보 입력 */
