투게더마트 이름 옆에 아이콘 추가 및 CSS 스타일 개선: 아이콘을 플렉스 박스로 정렬하고 색상 조정

--- a/app/page_weblink.css
+++ b/app/page_weblink.css
@@ -1374,7 +1374,8 @@ color: #777;
 
 
 
-
+.sample__name span{ display: flex; align-items: center;}
+.sample__name span svg { fill: #fafafa;}
 /* 뒤로가기 */
 .sample__back {position: absolute; left: 0; top: 0; width: 50px; height: 64px; display: flex; align-items: center; justify-content: center; color: #fff; text-decoration: none;}
 
